--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "d3-ease": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-particles-js": "^3.5.3",
+    "react-redux": "^7.2.5",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spring": "^9.2.4",
+    "react-tsparticles": "^1.34.1",
+    "redux": "^4.1.1",
     "sass": "^1.37.5",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -45,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/d3-ease": "^3.0.0",
     "@types/react-router-dom": "^5.1.8"
   }
 }
