--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "aos": "^2.3.4",
     "d3-ease": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -20,6 +21,8 @@
     "react-scripts": "4.0.3",
     "react-spring": "^9.2.4",
     "react-tsparticles": "^1.34.1",
+    "react-use-measure": "^2.0.4",
+    "react-visibility-sensor": "^5.1.1",
     "redux": "^4.1.1",
     "sass": "^1.37.5",
     "typescript": "^4.1.2",
@@ -50,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "@types/d3-ease": "^3.0.0",
     "@types/react-router-dom": "^5.1.8"
   }
