--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-particles-js": "^3.5.3",
+    "react-preload": "^0.6.0",
     "react-redux": "^7.2.5",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
