--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "aos": "^2.3.4",
+    "axios": "^0.21.4",
     "d3-ease": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
